--- a/Plugins/Nop.Plugin.Shipping.FixedByWeightByTotal/Nop.Plugin.Shipping.FixedByWeightByTotal.csproj
+++ b/Plugins/Nop.Plugin.Shipping.FixedByWeightByTotal/Nop.Plugin.Shipping.FixedByWeightByTotal.csproj
@@ -15,6 +15,8 @@
     You need to set this parameter to true if your plugin has a nuget package 
     to ensure that the dlls copied from the NuGet cache to the output of your project-->
     <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
+    <ApplicationIcon />
+    <Win32Resource>C:\Users\asus\Desktop\NOP_PLUGINS\PoshtaLogo.jpg</Win32Resource>
   </PropertyGroup>
 
   <ItemGroup>
