--- a/Plugins/Nop.Plugin.Widgets.NovaPoshtaaa/Nop.Plugin.Widgets.NovaPoshta.csproj
+++ b/Plugins/Nop.Plugin.Widgets.NovaPoshtaaa/Nop.Plugin.Widgets.NovaPoshta.csproj
@@ -14,15 +14,14 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Remove="Model\**" />
-    <EmbeddedResource Remove="Model\**" />
-    <None Remove="Model\**" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\nopCommerce\nopCommerce_4.40.4\Libraries\Nop.Data\Nop.Data.csproj" />
     <ProjectReference Include="..\..\..\..\..\nopCommerce\nopCommerce_4.40.4\Libraries\Nop.Services\Nop.Services.csproj" />
+    <ProjectReference Include="..\..\..\..\..\nopCommerce\nopCommerce_4.40.4\Presentation\Nop.Web.Framework\Nop.Web.Framework.csproj" />
     <ProjectReference Include="..\..\..\..\..\nopCommerce\nopCommerce_4.40.4\Presentation\Nop.Web\Nop.Web.csproj" />
     <ClearPluginAssemblies Include="$(MSBuildProjectDirectory)\..\..\Build\ClearPluginAssemblies.proj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Model\" />
   </ItemGroup>
   <!-- This target execute after "Build" target -->
   <ItemGroup>
